# philippine-language-clustering

./: .gitignore  README.md  philippine_language_clustering.ipynb  pyproject.toml
.github/workflows/: ci.yml
data/language_map/: data_map.csv  data_sim_char.csv  data_sim_word.csv  province_similarity_matrix.csv
notebooks/: language_map_clustering.ipynb  languages.ipynb  philippine_language_clustering.ipynb
others/: data_sim_char.csv  data_sim_word.csv  languages.ipynb
src/: cleaning_preprocessing.py  feature_engineering.py  main.py  modeling.py  similarity.py
